Fixing issue where item panel was covering the searchbar

--- a/Innovator/Client/styles/main.css
+++ b/Innovator/Client/styles/main.css
@@ -97,7 +97,7 @@
 .aras-navigation-panel__secondary-menu {
   position: absolute;
   left: 0;
-  top: 48px;
+  top: 93px;
 }
 .aras-navigation-panel .aras-nav {
   padding: 0 12px;
